--- a/style.css
+++ b/style.css
@@ -5,3 +5,26 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* nav e bottoni */
+
+nav{
+    width: 100%;
+    position: fixed;
+    content: "";
+    display: table;
+    clear: both;
+}
+
+nav .button{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: white;
+    display: inline-block;
+    border: 1px solid black;
+    text-align: center;
+    line-height: 20px;
+    margin: 30px;
+    float: right;
+}
