--- a/style.css
+++ b/style.css
@@ -8,9 +8,24 @@
 
 /* nav e bottoni */
 
-nav{
+.nav-container{
     width: 100%;
+    height: 200px;
+    /* background-color: rgba(255, 255, 255, 0); */
+    position: relative;
+}
+
+
+nav{
     position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    margin-right: 30px;
+    z-index: 1;
+}
+
+nav::after{
     content: "";
     display: table;
     clear: both;
@@ -21,10 +36,64 @@ nav .button{
     width: 20px;
     border-radius: 50%;
     background-color: white;
-    display: inline-block;
     border: 1px solid black;
     text-align: center;
     line-height: 20px;
     margin: 30px;
     float: right;
+    
+    
 }
+
+/* full viewport div's */
+
+.full-viewport{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;    
+}
+
+
+/* container and contained*/
+
+.container{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+ 
+.contained{
+    width: 40%;
+    height: 50%;
+    background-color: rosybrown;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+/* img and text */
+
+.contained img{
+    width: 100%;
+    height: 100%;
+}
+
+.contained h3{
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
+
+
+
+
+/* useful classes */
+
+.red{
+    background-color: red;
+}
+
