--- a/style.css
+++ b/style.css
@@ -45,13 +45,22 @@ nav .button{
     
 }
 
+/* biggest wrapper ever */
+.wrapper{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;  
+}
+
+
 /* full viewport div's */
 
 .full-viewport{
     width: 100%;
     height: 100vh;
-    position: absolute;
-    top: 0;    
+    position: relative;
+     
 }
 
 
@@ -66,7 +75,6 @@ nav .button{
 .contained{
     width: 40%;
     height: 50%;
-    background-color: rosybrown;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -97,3 +105,12 @@ nav .button{
     background-color: red;
 }
 
+
+.green{
+    background-color: green;
+}
+
+
+.yellow{
+    background-color: yellow;
+}
