--- a/style.css
+++ b/style.css
@@ -1,21 +1,12 @@
 /* reset */
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Permanent Marker', cursive;
 }
 
 /* nav e bottoni */
-
-.nav-container{
-    width: 100%;
-    height: 200px;
-    /* background-color: rgba(255, 255, 255, 0); */
-    position: relative;
-}
-
-
 nav{
     position: fixed;
     top: 0;
@@ -40,22 +31,11 @@ nav .button{
     text-align: center;
     line-height: 20px;
     margin: 30px;
-    float: right;
-    
-    
-}
-
-/* biggest wrapper ever */
-.wrapper{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;  
+    float: right;   
 }
 
 
 /* full viewport div's */
-
 .full-viewport{
     width: 100%;
     height: 100vh;
@@ -65,7 +45,6 @@ nav .button{
 
 
 /* container and contained*/
-
 .container{
     width: 100%;
     height: 100%;
@@ -82,7 +61,6 @@ nav .button{
 }
 
 /* img and text */
-
 .contained img{
     width: 100%;
     height: 100%;
@@ -92,15 +70,17 @@ nav .button{
     width: 100%;
     text-align: center;
     text-transform: uppercase;
+    font-size: 24px;
 }
-
-
+/* 
+.container:hover img{
+    filter: grayscale(100%);
+}  */
 
 
 
 
 /* useful classes */
-
 .red{
     background-color: red;
 }
