--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ nav .button{
     width: 100%;
     text-align: center;
     text-transform: uppercase;
-    font-size: 3.2vh;
+    font-size: 24px;
 }
 
 
